--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,8 @@
-body, html {
-    margin: 0;
-    padding: 0;
-    font-family: sans-serif;
-  }
-  
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+body{
+    /* background-color: rgba(250, 235, 215, 0.624); */
+    
+}
